--- a/.github/workflows/update-nb.yaml
+++ b/.github/workflows/update-nb.yaml
@@ -2,13 +2,12 @@ name: Update Notebooks And Refresh Page
 on:
   schedule:
     - cron:  '15 */12 * * *'
-  issues:
-    types: [opened]
+  # issues:
+  #   types: [opened]
 
 jobs:
   update-notebooks:
-    if: (github.event_name == 'schedule' || (github.event.issue.title == '[dashboard] Refresh Notebooks'  && github.actor == 'hamelsmu' && github.event_name == 'issues'))
-    # && github.repository == 'github/covid19-dashboard'
+    # if: (github.event_name == 'schedule' || (github.event.issue.title == '[dashboard] Refresh Notebooks'  && github.actor == 'hamelsmu' && github.event_name == 'issues'))# && github.repository == 'github/covid19-dashboard'
     runs-on: ubuntu-latest
     steps:
   
