--- a/.github/workflows/update-nb.yaml
+++ b/.github/workflows/update-nb.yaml
@@ -1,7 +1,7 @@
 name: Update Notebooks And Refresh Page
 on:
   schedule:
-    - cron:  '15 */12 * * *'
+    - cron:  '20 15 * * *'
   # issues:
   #   types: [opened]
 
