Updating notebooks in every commit

--- a/.github/workflows/update-nb.yaml
+++ b/.github/workflows/update-nb.yaml
@@ -2,6 +2,12 @@ name: Update Notebooks And Refresh Page
 on:
   schedule:
     - cron:  '20 15 * * *'
+  push:
+    branches:
+      - master # need to filter here so we only deploy when there is a push to master
+  # no filters on pull requests, so intentionally left blank
+  pull_request: 
+
   # issues:
   #   types: [opened]
 
