--- a/.github/workflows/update-nb.yaml
+++ b/.github/workflows/update-nb.yaml
@@ -5,14 +5,10 @@ on:
   issues:
     types: [opened]
   push:
-    branches:
-      - master # need to filter here so we only deploy when there is a push to master
-  # no filters on pull requests, so intentionally left blank
-  pull_request: 
 
 jobs:
   update-notebooks:
-    if: (github.event_name == 'schedule' || (github.event.issue.title == '[dashboard] Refresh Notebooks'  && github.actor == 'gmiretti' && github.event_name == 'issues')) && github.repository == 'OpenDataCovidAr/fastpages'
+    if: (github.event_name == 'schedule' || github.event_name == 'push' || (github.event.issue.title == '[dashboard] Refresh Notebooks'  && github.actor == 'gmiretti' && github.event_name == 'issues')) && github.repository == 'OpenDataCovidAr/fastpages'
     runs-on: ubuntu-latest
     steps:
   
@@ -89,6 +85,7 @@ jobs:
         RUN_ID: ${{ github.run_id	 }}
 
     - name: save notebooks & images
+      if: github.event_name	!= 'push' || github.ref == 'refs/heads/master'
       run: |
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
         git config --global user.name "github-actions[bot]"
@@ -117,7 +114,8 @@ jobs:
         cp CNAME _site/ 2>/dev/null || :
         
     - name: Deploy
-      uses: peaceiris/actions-gh-pages@v3
+    if: github.event_name	!= 'push' || github.ref == 'refs/heads/master'
+    uses: peaceiris/actions-gh-pages@v3
       with:
         deploy_key: ${{ secrets.SSH_DEPLOY_KEY }}
         publish_dir: ./_site
