--- a/.github/workflows/update-nb.yaml
+++ b/.github/workflows/update-nb.yaml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   update-notebooks:
-    if: (github.event_name == 'schedule' || github.event_name == 'push' || (github.event.issue.title == '[dashboard] Refresh Notebooks'  && github.actor == 'gmiretti' && github.event_name == 'issues')) && github.repository == 'OpenDataCovidAr/fastpages'
+    if: (github.event_name == 'schedule' || (github.event_name == 'push' || (github.event.issue.title == '[dashboard] Refresh Notebooks'  && github.actor == 'gmiretti' && github.event_name == 'issues'))) && github.repository == 'OpenDataCovidAr/fastpages'
     runs-on: ubuntu-latest
     steps:
   
