--- a/.github/workflows/update-nb.yaml
+++ b/.github/workflows/update-nb.yaml
@@ -5,11 +5,12 @@ on:
   issues:
     types: [opened]
   push:
+    branches:
+      - master
 
 jobs:
   update-notebooks:
-    if: github.repository == 'OpenDataCovidAr/fastpages'
-    # if: (github.event_name == 'schedule' || (github.event_name == 'push' || (github.event.issue.title == '[dashboard] Refresh Notebooks'  && github.actor == 'gmiretti' && github.event_name == 'issues'))) && github.repository == 'OpenDataCovidAr/fastpages'
+    if: (github.event_name == 'schedule' || (github.event_name == 'push' || (github.event.issue.title == '[dashboard] Refresh Notebooks'  && github.actor == 'gmiretti' && github.event_name == 'issues')))
     runs-on: ubuntu-latest
     steps:
   
