--- a/.github/workflows/update-nb.yaml
+++ b/.github/workflows/update-nb.yaml
@@ -1,7 +1,7 @@
 name: Update Notebooks And Refresh Page
 on:
-  schedule:
-    - cron:  '0 */6 * * *'
+  # schedule:
+  #   - cron:  '0 */6 * * *'
   issues:
     types: [opened]
   push:
